--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --heading-color: white;
-    --body-color: white;
+    --body-color: #773737;
     --greenery: #b7c671;
     --action-color-outline: #97ac00;
     --modal-bg: #e8e8e8;
@@ -52,7 +52,7 @@ footer {
 }
 
 footer a {
-    color: #6899cc;
+    color: #0050a4;
 }
 
 a {
@@ -388,4 +388,52 @@ img {
 
 .source-code a {
     color: #ffffff5e;
+}
+
+#modal {
+    background: #f8ffd8;
+    border: 1px solid #fff;
+    padding: 20px;
+    width: 40%;
+    max-width: 90vw;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    color: #5f3939;
+}
+
+#modal input {
+    padding: 5px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    background-color: #dccfbd;
+}
+
+#modal button {
+    background-color: #adb7d5;
+    border: none;
+    border-radius: 4px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+#modal:popover-open {
+    position: fixed;
+    top: 20%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+}
+
+::backdrop {
+    backdrop-filter: blur(3px);
+}
+
+@media (orientation: portrait) {
+    #modal {
+        width: 65%;
+    }
+
+    #modal:popover-open {
+        left: 50%;
+    }
 }
